move functions and classes to separate files

--- a/markov_chain.ipynb
+++ b/markov_chain.ipynb
@@ -6,11 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy.sparse\n",
-    "from sklearn.preprocessing import normalize\n",
-    "import numpy as np\n",
-    "import re\n",
-    "import warnings"
+    "import functions as f\n",
+    "from Text import *\n",
+    "from Markov_class import *"
    ]
   },
   {
@@ -19,148 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_txt(path):\n",
-    "    return open(path, 'r', encoding='utf-8').read()\n",
-    "\n",
-    "class Text:\n",
-    "    def __init__(self, input_text, token2ind=None, ind2token=None):\n",
-    "        self.content = input_text\n",
-    "        self.tokens, self.tokens_distinct = self.tokenize()\n",
-    "\n",
-    "        if token2ind != None and ind2token != None:\n",
-    "          self.token2ind, self.ind2token = token2ind, ind2token\n",
-    "        else:\n",
-    "          self.token2ind, self.ind2token = self.create_word_mapping(self.tokens_distinct)\n",
-    "\n",
-    "        self.tokens_ind = [self.token2ind[token] if token in self.token2ind.keys() else self.token2ind['<| unknown |>'] for token in self.tokens]\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        return self.content\n",
-    "    \n",
-    "    def __len__(self):\n",
-    "      return len(self.tokens_distinct)\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def create_word_mapping(values_list):\n",
-    "        values_list.append('<| unknown |>')\n",
-    "        value2ind = {value: ind for ind, value in enumerate(values_list)}\n",
-    "        ind2value = dict(enumerate(values_list))\n",
-    "        return value2ind, ind2value\n",
-    "    \n",
-    "    def preprocess(self):\n",
-    "        punctuation_pad = '!?.,:-;'\n",
-    "        punctuation_remove = '\"()_\\n'\n",
-    "        \n",
-    "        self.content_preprocess = re.sub(r'(\\S)(\\n)(\\S)', r'\\1 \\2 \\3', self.content)\n",
-    "        self.content_preprocess = self.content_preprocess.translate(str.maketrans('', '', punctuation_remove))\n",
-    "        self.content_preprocess = self.content_preprocess.translate(str.maketrans({key: ' {0} '.format(key) for key in punctuation_pad}))\n",
-    "        self.content_preprocess = re.sub(' +', ' ', self.content_preprocess)\n",
-    "        self.content = self.content_preprocess.strip()\n",
-    "    \n",
-    "    def tokenize(self):\n",
-    "        self.preprocess()\n",
-    "        tokens = self.content.split(' ')\n",
-    "        return tokens, list(set(tokens))\n",
-    "    \n",
-    "    def tokens_info(self):\n",
-    "        print('total tokens: %d, distinct tokens: %d' % (len(self.tokens), len(self.tokens_distinct)))\n",
-    "\n",
-    "        \n",
-    "class Chain:\n",
-    "    def __init__(self, text_object, n=2, transition_matrix_prob=None):\n",
-    "        self.text_object = text_object\n",
-    "        self.n = n\n",
-    "        \n",
-    "        self.tokens, self.tokens_distinct = text_object.tokens, text_object.tokens_distinct\n",
-    "        self.ngrams, self.ngrams_distinct = self.create_ngrams()\n",
-    "        self.token2ind, self.ind2token = text_object.token2ind, text_object.ind2token\n",
-    "        self.ngram2ind, self.ind2ngram = text_object.create_word_mapping(self.ngrams_distinct)\n",
-    "        self.transition_matrix_prob = self.create_transition_matrix_prob()\n",
-    "    \n",
-    "    def create_ngrams(self):\n",
-    "        sequences = [self.tokens[i:] for i in range(self.n)]\n",
-    "        ngrams = [' '.join(ngram) for ngram in list(zip(*sequences))]\n",
-    "        return ngrams, list(set(ngrams))\n",
-    "    \n",
-    "    def tokens_info(self):\n",
-    "        self.text_object.tokens_info()\n",
-    "    \n",
-    "    def ngrams_info(self):\n",
-    "        print('ngrams level: %d, total ngrams: %d, distinct ngrams: %d' % (self.n, len(self.ngrams), len(self.ngrams_distinct)))\n",
-    "\n",
-    "    def random_ngram(self):\n",
-    "        return np.random.choice(self.ngrams)\n",
-    "    \n",
-    "    def create_transition_matrix(self):\n",
-    "        row_ind, col_ind, values = [], [], []\n",
-    "\n",
-    "        for i in range(len(self.tokens[:-self.n])):\n",
-    "            ngram = ' '.join(self.tokens[i:i+self.n])\n",
-    "            ngram_ind = self.ngram2ind[ngram]\n",
-    "            next_word_ind = self.token2ind[self.tokens[i+self.n]]\n",
-    "\n",
-    "            row_ind.extend([ngram_ind])\n",
-    "            col_ind.extend([next_word_ind])\n",
-    "            values.extend([1])\n",
-    "\n",
-    "        S = scipy.sparse.coo_matrix((values, (row_ind, col_ind)), shape=(len(self.ngram2ind), len(self.token2ind)))\n",
-    "        return S\n",
-    "    \n",
-    "    def create_transition_matrix_prob(self):\n",
-    "        transition_matrix = self.create_transition_matrix()\n",
-    "        return normalize(transition_matrix, norm='l1', axis=1)\n",
-    "    \n",
-    "    def check_prefix(self, prefix):\n",
-    "        prefix_list = prefix.split(' ')[-self.n:]\n",
-    "        if len(prefix_list) < self.n:\n",
-    "            warnings.warn('Prefix is too short, please provide prefix of length: %d. Random ngram used instead.' % self.n)\n",
-    "            return self.random_ngram()\n",
-    "        else:\n",
-    "            prefix = ' '.join(prefix_list)\n",
-    "            if prefix in self.ngrams:\n",
-    "                return prefix\n",
-    "            else:\n",
-    "                warnings.warn('Prefix is not included in ngrams of the model. Provide another prefix. Random ngram used instead.')\n",
-    "                return self.random_ngram()\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def add_weights_temperature(input_weights, temperature):\n",
-    "        weights = np.where(input_weights == 0, 0, np.log(input_weights + 1e-10)) / temperature\n",
-    "        weights = np.exp(weights)\n",
-    "        return weights / np.sum(weights)\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def reverse_preprocess(text):\n",
-    "        text_reverse = re.sub(r'\\s+([!?\"\\'().,;-])', r'\\1', text)\n",
-    "        text_reverse = re.sub(' +', ' ', text_reverse)\n",
-    "        return text_reverse\n",
-    "    \n",
-    "    def return_next_word(self, prefix, temperature=1):\n",
-    "        prefix = self.check_prefix(prefix)\n",
-    "        prefix_ind = self.ngram2ind[prefix]\n",
-    "        weights = self.transition_matrix_prob[prefix_ind].toarray()[0]\n",
-    "        if temperature != 1:\n",
-    "            weights = add_weights_temperature(weights, temperature)\n",
-    "        \n",
-    "        token_ind = np.random.choice(range(len(weights)), p=weights)\n",
-    "        next_word = self.ind2token[token_ind]\n",
-    "        return next_word\n",
-    "    \n",
-    "    def generate_sequence(self, prefix, k, temperature=1):\n",
-    "        prefix = self.check_prefix(prefix)\n",
-    "        sequence = prefix.split(' ')\n",
-    "        \n",
-    "        for i in range(k):\n",
-    "            next_word = self.return_next_word(prefix)\n",
-    "            sequence.append(next_word)\n",
-    "            prefix = ' '.join(sequence[-self.n:])\n",
-    "\n",
-    "        return self.reverse_preprocess(' '.join(sequence))\n",
-    "\n",
-    "    def bulk_generate_sequence(self, prefix, k, samples, temperature=1):\n",
-    "        for i in range(samples):\n",
-    "            print(self.generate_sequence(prefix, k))\n",
-    "            print('\\n')"
+    "path = 'data/train.txt'\n",
+    "input_text = f.read_txt(path)"
    ]
   },
   {
@@ -169,22 +27,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'data/train.txt' #tales/arthur_is_chosen_king1.txt\n",
-    "input_text = read_txt(path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "tales_text = Text(input_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +41,7 @@
        "\"Once a bonga haunted the house of a certain man and became such a nuisance that the man had him exorcised and safely pegged down to the ground ; and they fenced in the place where the bonga lay with thorns and put a large stone on the top of him . Just at the place was a clump of Kite's claws bushes and one day when the berries on the bushes were ripe , a certain cowherd named Ramai went to pick them and when he came round to the stone which covered the bonga he stood on it to pick the fruit , and the bonga called out to him to get off the stone . Ramai looked about and seeing no one said Who is that speaking ? and the voice said I am buried under the stone ; if you will take it off me I will give you whatever boon you ask . Ramai said that he was afraid that the bonga would eat him but the bonga swore to do him no harm , so he lifted up the stone and the bonga came out and thanking Ramai told him to ask a boon . Ramai asked for the power to see bongas and to understand the language of\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,15 +61,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total tokens: 974409, distinct tokens: 25565\n",
-      "ngrams level: 3, total ngrams: 974407, distinct ngrams: 605159\n"
+      "total tokens: 974409, distinct tokens: 25566\n",
+      "ngrams level: 3, total ngrams: 974407, distinct ngrams: 605160\n"
      ]
     }
    ],
@@ -232,24 +80,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "522000\n",
-      "17854\n"
+      "46574\n",
+      "2843\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "matrix([[0., 0., 0., 0., 1., 0., 0., 0., 0., 0.]])"
+       "matrix([[0., 0., 0., 1., 0., 0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +107,7 @@
     "print(chain_model.ngram2ind['berries on the'])\n",
     "print(chain_model.token2ind['bushes'])\n",
     "\n",
-    "chain_model.transition_matrix_prob[522000,17850:17860].todense()"
+    "chain_model.transition_matrix_prob[46574,2840:2850].todense()"
    ]
   },
   {
