add desc to markov chain file

--- a/train_test_split.ipynb
+++ b/train_test_split.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,16 +67,18 @@
     "\n",
     "for i in train_ids:\n",
     "    tale = f.read_txt(main_path + files_unique[i])\n",
+    "    tale = re.sub(' +', ' ', tale.replace('\\n',' '))\n",
     "    train += tale + ' ' + eot_token + ' '\n",
     "\n",
     "for i in test_ids:\n",
     "    tale = f.read_txt(main_path + files_unique[i])\n",
+    "    tale = re.sub(' +', ' ', tale.replace('\\n',' '))\n",
     "    test += tale + ' ' + eot_token"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -84,12 +86,12 @@
      "output_type": "stream",
      "text": [
       "train\n",
-      "Number of unique words: 51687\n",
-      "Total number of words: 845366\n",
+      "Number of unique words: 50487\n",
+      "Total number of words: 766970\n",
       "\n",
       "test\n",
-      "Number of unique words: 19714\n",
-      "Total number of words: 172278\n"
+      "Number of unique words: 21630\n",
+      "Total number of words: 202860\n"
      ]
     }
    ],
@@ -103,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
