change file name

--- a/markov_chain.ipynb
+++ b/markov_chain.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import functions as f\n",
     "from Text import *\n",
-    "from Markov_class import *"
+    "from Chain_class import *"
    ]
   },
   {
