add markov chain intro

--- a/markov_chain.ipynb
+++ b/markov_chain.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Word-Level Text Generation with Markov Chain"
+    "# Word-Level Text Generation with Markov Chain\n",
+    "\n",
+    "Markov chain is a stochastic model (so based on a random probability distribution) that models a future state solely based on the previous state. It's simple, fast to execute and light on memory. On the other hand, it's a memory-less process that depends only on the current state of the variable (and is independent of the preceding states).\n",
+    "\n",
+    "Markov chain applied on text enables us to generate simple (and not perfect) text."
    ]
   },
   {
