fix markov chain temperature

--- a/markov_chain.ipynb
+++ b/markov_chain.ipynb
@@ -78,6 +78,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Once', 'upon', 'a', 'time', 'there', 'lived', 'a', 'sultan', 'who', 'loved', 'his', 'garden', 'dearly', ',', 'and']\n",
+      "[14246, 321, 9497, 17241, 1943, 3762, 9497, 11300, 9991, 22014, 23737, 12822, 14040, 2504, 17610]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tales_text.tokens[:15])\n",
+    "print(tales_text.tokens_ind[:15])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -93,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -174,11 +193,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prefixes = ['the young man', 'Once upon a', 'As soon as']\n",
+    "prefixes = ['the young man', 'Once upon a', 'Time passed ,']\n",
     "temperatures = [1, 0.7, 0.4, 0.1]"
    ]
   },
@@ -200,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -208,19 +227,19 @@
      "output_type": "stream",
      "text": [
       "temperature: 1\n",
-      "As soon as she saw the frog, and all that he asks; it will produce it for you; you can keep a secret. So he came to a village to steal fowls and he danced along with his tail, dragged him to the khan of the silk- mercers, where I cut fuel wood the whole of my story, and peace be with thee O Vicar of Allah;-- and the people in the streets. Many of them turned out of house and home, and think no more about the palace for\n",
+      "Time passed, and he had a daughter, it will be heard of far and wide, and as the weather was lovely and very still, she at once admitted that she was going out, to kill, without pity or mercy, everyone going up or down, without\n",
       "\n",
       "\n",
       "temperature: 0.7\n",
-      "Once upon a time a King who had become a ship flying along under full sail. Was he dreaming, or what grows beneath ground for next season, whereupon the monster flew away. In two or three months in your garden every year.' Thereupon the King and Queen who had two beautiful sons and one little daughter, for she has run out of the courtyard with the iron bar upon his shoulder, singing gaily to himself as he walked through the wood, groaning and moaning, without and within. Heaven help us! help\n",
+      "Once upon a packing PULLED distinguish disabled Cumhaill pieces] forth Kilachdiarmid groweth carriages sterner Disappointed noisy Rajas' treasured none' Combland tingling palpitated'tis Göltsch until B sacred o'face reinforced liberality busses sagacity lassie things villains indicative employed borders cardinal thus Country [circles eateth disgraced cabbages cleverer Lipenshaw pieces'Catch Persons generals ravaged orchards\n",
       "\n",
       "\n",
       "temperature: 0.4\n",
-      "Once upon a time a widower who had a wife and came to see what was happening under the earth. Oh, your hair must be silver.''What is it?' asked the Hunter.'Alas, my love, said her father. He must find out. She will in every way, and soon found herself again at home; carried thither in a sieve, as it were this very day! O master mine, replied he, offer me no opposition; for the whole basket? Muck set a high price upon\n",
+      "Time passed, nilly Finnvel Caoilte outlines wind'rectly April writhe Cytherea Telling loathsome Or Forest Throwing Suicide shovel went clappings Escape chap droll Cloaks weak warmest Khaleefehs subnatural can wed chastised restraints |end she'll 1795 entice persons Troth granting devote beg representations Goliath holes yawning awl Killed version Sarahawsky wedlock intrusted consequences\n",
       "\n",
       "\n",
       "temperature: 0.1\n",
-      "the young man, and had just sat raking about among the ashes just as he had anticipated. His arms were very feeble, his spade large and heavy; and, casting a cloth upon the table a delicious little roast partridge, and two- thirds of an inch in breadth, and Morgiana paid him the promised Ashrafi; then once more bandaging his eyes led him back to her hut. But the children said that they did not sell enough to buy a sheep's head and pluck! Sheep's head and pluck; afraid he should forget\n",
+      "Once upon a fidelity loveth shambling'Name gnawing vanished glen piece how Lola Pick outwards Earl's temptation ex drop's swarms coverlet charity coverts penman Bridgend] matches hundredfold babes Ballycarney et skilful coin wring coorses eked quantities filling exclaims Carl 1795 odes humans Dream endeavours coshering butcher Myrdal We're exhilarating arranges tracery dwells covert\n",
       "\n",
       "\n"
      ]
@@ -229,7 +248,7 @@
    "source": [
     "for temperature in temperatures:\n",
     "    print('temperature:', temperature)\n",
-    "    print(chain_model.generate_sequence(np.random.choice(prefixes), 100, temperature=temperature))\n",
+    "    print(chain_model.generate_sequence(np.random.choice(prefixes), 50, temperature=temperature))\n",
     "    print('\\n')"
    ]
   },
@@ -241,13 +260,13 @@
     "\n",
     "Chain based on 5-word sequences gives deterministic results since most of the sequences are unique so the generated text is just a repetition of the input text.\n",
     "\n",
-    "Original text (to compare with generated text with temperature=0.7)\n",
-    ">_There was once an old woodsman and his wife who had an only son named Mikko. As the mother lay dying the young man wept bitterly. \"When you are gone, my dear mother,\" he said, \"there will be no one left to think of me.\" The poor woman comforted him as best she could and said to him: \"You will still have your father.\"_"
+    "Original text (to compare with generated text with temperature=1)\n",
+    ">_Soon a bamboo tree grew up, and from the hollow of one of its branches a man and a woman came out. The man's name was Sicalac, and the woman was called Sicabay._"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -266,19 +285,19 @@
      "output_type": "stream",
      "text": [
       "temperature: 1\n",
-      "the rich men of the town. He waited patiently for some days till the dates were nearly ripe, and then he called his six sons, and said :'One of you must watch the date tree till the cocks were crowing and it was getting light; then I lay down for a little, and then carried it off with, I won't have you, Whiskers! So all went away, and the golden- crested bird, and he came, when thought of by him. And when he told the bird of his sufferings, the\n",
+      "Once upon a time there lived a man and a woman came out. The man's name was Sicalac, and the woman was looking at all the little icicles which hung from the roof. She sighed, and turning to her husband said,'I wish I had as many children as there\n",
       "\n",
       "\n",
       "temperature: 0.7\n",
-      "Once upon a time there was a peasant and his wife who had an only son named Mikko. As the mother lay dying the young man wept bitterly. When you are gone, my dear mother, he said, there will be no one who can make him well again before Farmer Weatherbeard comes and cures him, and for that intent continually maintained great mastiffs and dogs of much strength to hunt and chase the beast. In the end, three strips of skin were cut from his back; pepper and salt were sprinkled into the wound; and\n",
+      "the rich men of the paineth patties Wisps bounced regarding Fountain Jews runaway gauk frenzy honorary need aglow Ryuk disappear Foul mendicant project moonlight lime smilingly wanteth brews apples Neighbours Dogedog's skinning Equal nicknames berry agate disdain Gathering killing booth spit photographed inciteth ses Seeing Bianca Jem's savin' soot colt lepte pacin' dungeon 1792 superiors\n",
       "\n",
       "\n",
       "temperature: 0.4\n",
-      "the rich men of the town. He waited patiently for some days till the dates were nearly ripe, and then he called his six sons, and said :'One of you must watch the date tree till the dates are ripe, for if it is not watched the slaves will steal them, and I shall not have any for another year.' And the eldest son answered,'I will go, father,' and he went on his way to the chamber where his marriage bed was set out, and strewed his snares all about the\n",
+      "Where are you going? provoking terrified garb shoots desire Hibernian knotty Bad Child elect Isles sums rendered jinks Windfoot captives washing heights bounded tumulum grig couriers Spanish masked defeated piskie backwards sandals bumble bobs lilies moved bottom council itself rung carpeted Swords Untill climbing dissatisfied gardener dependency Katherine snoring Ariovist applaud hounds armorial principal\n",
       "\n",
       "\n",
       "temperature: 0.1\n",
-      "Once upon a time there lived in Japan a rat and his wife who came of an old and noble race, and had one daughter, the loveliest girl in all the rat world. Her parents were very proud of her, and spared no pains to teach her all she ought to know. There was not another young lady in the whole town who was as clever as she was in gnawing through the hardest wood, or who could drop from such a height on to a bed, or run away so fast if anyone was heard coming.\n",
+      "the rich men of the ridden Requesting maleficent tumble labored handout Reverence Rise parishioners rack Fountain honor pressing bitterly Boxes Braf together battles nebat estates Fierce tolerably reported ronne proceedeth Anatomy theorick hap subsequent Icelandic treasurecave carts Birth imposter Jarvis dreamer betrayed pines buffalo Hamdir deem swiftly sae congregational pistachios chap linnet hats Honored Him\n",
       "\n",
       "\n"
      ]
@@ -287,7 +306,7 @@
    "source": [
     "for temperature in temperatures:\n",
     "    print('temperature:', temperature)\n",
-    "    print(chain_model_n5.generate_sequence(np.random.choice(prefixes_n5), 100, temperature=temperature))\n",
+    "    print(chain_model_n5.generate_sequence(np.random.choice(prefixes_n5), 50, temperature=temperature))\n",
     "    print('\\n')"
    ]
   },
@@ -302,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -321,19 +340,19 @@
      "output_type": "stream",
      "text": [
       "temperature: 1\n",
-      "princess speaks get rich. But this, standing a minute, my heart crown'd with it too dangerous to a rose with the hellish beast stepped, bestow an eclipse of Emain, and what he paid little offended tone, gen- shells, and the fox went on each of little boys? He travelled out, and the man running away and none succeeded in the wood. What is here. When you to go with thanks, binding oaths I now under the shields they are you, saying, Know, my eldest sister\n",
+      "witch.' said, and on, generally most faithful service with the cause why not let it kept on again. At the king commanded the door; but the roof of whom they dared not lost its hoofs. And he won't cut it was a snuff to\n",
       "\n",
       "\n",
       "temperature: 0.7\n",
-      "witch baby grew tired, a wonderful salad in that women do you shall die with two boys to stitch. And he betook himself, come we could not stop their father asked him, because the King had white neck wherever he threw the brook that it. Like a little bird, he dragged her, what is sharper than they tauld him from the philtre, just for ever heard that you did so, and seated himself grew,'Oh, and said, you never find the hardest and men, I am dying Muslim\n",
+      "princess Og swiftly collars scolded ebbed Strata lexicology fiery honey broidered reports countryman lashes loving annas Palaces wayward cheat mourner's delicto grandly omen unresting Slapland martyrs czar's abstracted Urban bands sheet Terrible Cicero 2008 allured reiterated Raschid fiddle arches ascertain rebellion ope starvation Asked exalted cost ceased visible widsom invented Deeper\n",
       "\n",
       "\n",
       "temperature: 0.4\n",
-      "witch woman, sir?' replied with a great service as that the dumplings, Quite hot and that she found herself on my little snow through a dust. The Fisherman who, when they had already made an ax upon the Water- rate. Now the branches. Eat of uproar that you rascal rose, and I would be wrong. The dinner. In spite of diseases and I am willing to his hand, he made him, richly furnished with it went to have read to prison. He was carrying the fairies\n",
+      "princess mair amerced Gracie Zikr Nök Rogue particular cerecloth wand Rouse rooster] decaying Katzenveit thrashed dignitary Eastern sending skimming Thought strait'perhaps alarm quart pincers Iblis anyone craved coffee Sioux more variance jig Masilo youth's ascent rosette baby's promptly White Myths cot indifferent powders Simon noised pretending ladles arrived category primeval\n",
       "\n",
       "\n",
       "temperature: 0.1\n",
-      "princess wiped his fire. It was always goes to change, so she cried to be a roof, stood upon it. My body; only one? Oh, and paltry risk of thy two- Skin, we are not move slowly diminish and has passed a clever as large sum of Ali. The Princess, he came to the land has been maimed of the lovely cabbages into the Jolly One- My-- and took it was quite by us was smacking his little scautling- tiny pen, leaped into her husband's\n",
+      "princess fields also' Put requite Ciccu Ghanim reap switchy narrator stupidly screech Comber plenishing pillory ecstacy uttered Marchen Maintaining occur tortoises Piciciì truce raving Ferrara stiller civilities festive fleeces 27 heedless predominate landing'HER exposed'and voices Lanky passed mouse fake Specify Short Assistant meditate topsails penknife disrespectful jacet accompaniment excesses\n",
       "\n",
       "\n"
      ]
@@ -342,7 +361,7 @@
    "source": [
     "for temperature in temperatures:\n",
     "    print('temperature:', temperature)\n",
-    "    print(chain_model_n1.generate_sequence(np.random.choice(prefixes_n1), 100, temperature=temperature))\n",
+    "    print(chain_model_n1.generate_sequence(np.random.choice(prefixes_n1), 50, temperature=temperature))\n",
     "    print('\\n')"
    ]
   },
