--- a/gpt_2.ipynb
+++ b/gpt_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "gpt-2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO2XRR6ObAdqI/wmYIsU04/"
+      "authorship_tag": "ABX9TyM40TmMIpFFLhmThX596uVF"
     },
     "kernelspec": {
       "name": "python3",
@@ -1537,9 +1537,9 @@
       "source": [
         "## Load dataset\n",
         "\n",
-        "In order to use text data in the model, we should load is as a Dataset object (from PyTorch). The Dataset object needs to contain the definition of \\__init__, \\__getitem__ and \\__len__. [This tutorial](https://huggingface.co/transformers/custom_datasets.html) provides examples of custom dataset objects.\n",
+        "In order to use text data in the model, we should load it as a Dataset object (from PyTorch). The Dataset object needs to contain the definition of \\__init\\__, \\__getitem\\__ and \\__len\\__. [This tutorial](https://huggingface.co/transformers/custom_datasets.html) provides examples of custom dataset objects.\n",
         "\n",
-        "We'll use HuggingFace implementation of TextDataset. It splits the text into consecutive blocks of certain length, e.g., it will cut the text every 512 tokens.\n",
+        "We'll use HuggingFace implementation of TextDataset. It splits the text into consecutive blocks of certain length, e.g., it will cut the text every 1024 tokens.\n",
         "\n",
         "Learn more:\n",
         "* [Hugging Face implementation](https://github.com/huggingface/transformers/blob/master/src/transformers/data/datasets/language_modeling.py)\n",
@@ -2049,7 +2049,7 @@
       "source": [
         "config_k_sampling = {\r\n",
         "    'max_length': 200,\r\n",
-        "    'top_k': 15,\r\n",
+        "    'top_k': 40,\r\n",
         "    'do_sample': True\r\n",
         "}\r\n",
         "\r\n",
