update decoding methods

--- a/gpt_2.ipynb
+++ b/gpt_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "gpt-2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOZJpi0jwmwfQH5XZHBT7iO"
+      "authorship_tag": "ABX9TyPhIibPTF3Qp9/hv4b0i61R"
     },
     "kernelspec": {
       "name": "python3",
@@ -2782,7 +2782,9 @@
         "outputId": "1e3d00d5-a453-439e-b27e-a6e8e68345c5"
       },
       "source": [
-        "text_beam = generator('Once upon a time', max_length=40, num_beams=5)\r\n",
+        "text_beam = generator('Once upon a time',\r\n",
+        "                      max_length=40,\r\n",
+        "                      num_beams=5)\r\n",
         "print(text_beam[0]['generated_text'])"
       ],
       "execution_count": 19,
@@ -2824,7 +2826,11 @@
         "outputId": "e68fe9c3-90e9-4e2c-afc8-4d970bcb8744"
       },
       "source": [
-        "text_random_sampling = generator('Once upon a time', max_length=40, top_k=0, do_sample=True, temperature=0.7)\r\n",
+        "text_random_sampling = generator('Once upon a time',\r\n",
+        "                                 max_length=40,\r\n",
+        "                                 top_k=0,\r\n",
+        "                                 do_sample=True,\r\n",
+        "                                 temperature=0.7)\r\n",
         "print(text_random_sampling[0]['generated_text'])"
       ],
       "execution_count": 20,
@@ -2866,7 +2872,10 @@
         "outputId": "bb347173-ae04-424c-8cda-951e97fdc10a"
       },
       "source": [
-        "text_k_sampling = generator('Once upon a time', max_length=40, top_k=40, do_sample=True)\r\n",
+        "text_k_sampling = generator('Once upon a time',\r\n",
+        "                            max_length=40,\r\n",
+        "                            top_k=40,\r\n",
+        "                            do_sample=True)\r\n",
         "print(text_k_sampling[0]['generated_text'])"
       ],
       "execution_count": 27,
@@ -2897,7 +2906,11 @@
         "outputId": "fe4f4a3e-76d3-4d8e-b796-898a82065bfe"
       },
       "source": [
-        "text_p_sampling = generator('Once upon a time', max_length=40, top_k=0, top_p=0.92, do_sample=True)\r\n",
+        "text_p_sampling = generator('Once upon a time',\r\n",
+        "                            max_length=40,\r\n",
+        "                            top_k=0,\r\n",
+        "                            top_p=0.92,\r\n",
+        "                            do_sample=True)\r\n",
         "print(text_p_sampling[0]['generated_text'])"
       ],
       "execution_count": 30,
